# catppuccinifier-rs

./: Cargo.toml  README.md
src/: lib.rs
src/generate/: mod.rs
src/generation/: mod.rs
