[package]
name = "catppuccinifier-rs"
version = "1.1.2"
edition = "2021"
description = "A crate to unify image generation for catppuccinifier"
repository = "https://github.com/lighttigerXIV/catppuccinifier-rs"
license = "MIT"


[dependencies]
lutgen = "0.12.0"
lutgen-palettes  = "0.4.0"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
